Modification de la page Bières

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <nav class="footer-section">
                 <h3>Sections :</h3>
                 <a href="index.html">Accueil</a>
-                <a href="beers.html">Carte des bières</a>
+                <a href="beers.html">Nos bières</a>
                 <a href="events.html">Evènements</a>
                 <a href="#top">A propos de nous</a>
                 <a href="contacts.html">Nous contacter</a>
