--- a/beers.html
+++ b/beers.html
@@ -24,7 +24,7 @@
             <nav class="footer-section">
                 <h3>Sections :</h3>
                 <a href="index.html">Accueil</a>
-                <a href="#top">Carte des bières</a>
+                <a href="#top">Nos bières</a>
                 <a href="events.html">Evènements</a>
                 <a href="about.html">A propos de nous</a>
                 <a href="contacts.html">Nous contacter</a>
