Ajout du trademark sous le footer

--- a/about.html
+++ b/about.html
@@ -46,4 +46,7 @@
             </nav>
         </section>
     </footer>
+    <div class="trademark">
+        Coded by Alexandre, Julien and Philippe
+    </div>
 </html>
