--- a/contacts.html
+++ b/contacts.html
@@ -46,4 +46,7 @@
             </nav>
         </section>
     </footer>
+    <div class="trademark">
+        Coded by Alexandre, Julien and Philippe
+    </div>
 </html>
