--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
     <meta charset="UTF-8">
     <html lang="fr">
@@ -7,10 +8,13 @@
     <link rel="stylesheet" href="/style/index.css">
     <title>Les 3 Wilders | acceuil</title>
 </head>
+
 <body>
     <header>
         <nav class="menu-header">
-            <img src="/image/logo-neg.png" alt="logo de la marque Les 3 Wilders" class="logo-neg">
+            <div class="logo-neg">
+                <img src="/image/logo-neg.png" alt="logo de la marque Les 3 Wilders">
+            </div>
             <div class="menu-header-pages">
                 <a href="/index.html">Acceuil</a>
                 <a href="/beers.html">Nos bières</a>
@@ -18,15 +22,11 @@
                 <a href="/contacts.html">Contacts</a>
                 <a href="/about.html">A propos</a>
             </div>
-            <div class="header-network">
+            <div class="social-link">
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
             </div>
         </nav>
-        <div class="background-header">
-            <div class="background-header-overlay">
-            </div>
-        </div>
     </header>
     <main>
         <div class="thumbnail">
@@ -69,41 +69,42 @@
             </div>
         </div>
     </main>
-        <footer>
-            <section class="footer-container">
-                <aside class="infos">
-                    <img src="./image/logo nom.png" class="footer-logo" alt="">
-                    <p><i class="bi bi-house-door-fill"></i>742 Evergreen Terrace, 12345, Narnia</p>
-                    <a><i class="bi bi-envelope-fill"></i>Rien-a-voir-ici@brasserie-wilders.com</a>
-                    <p><i class="bi bi-phone-fill"></i>03.12.34.56.78</p>
-                </aside>
-                <nav class="footer-section">
-                    <h3>Sections :</h3>
-                    <a href="#top">Accueil</a>
-                    <a href="beers.html">Nos bières</a>
-                    <a href="events.html">Evènements</a>
-                    <a href="about.html">A propos de nous</a>
-                    <a href="contacts.html">Nous contacter</a>
-                </nav>
-                <aside class="footer-horaires">
-                    <h3>Horaires d'ouverture</h3>
-                    <p>La semaine : 15h-22h</p>
-                    <p>Le vendredi : 17h-00h</p>
-                    <p>Le samedi : 17h-03h</p>
-                    <p>Le dimanche : fermé</p>
-                </aside>
-                <nav class="footer-reseaux">
-                    <h3>Réseaux sociaux :</h3>
-                    <div class="network-icons">
-                        <a href=""><i class="bi bi-facebook"></i></a>
-                        <a href=""><i class="bi bi-instagram"></i></a>
-                    </div>
-                    <img src="./image/logoab_eurofeuille_biologique.png" class="network-image" alt="">
-                </nav>
-            </section>
-        </footer>
-        <div class="trademark">
-            Coded by Alexandre, Julien and Philippe
-        </div>
+    <footer>
+        <section class="footer-container">
+            <aside class="infos">
+                <img src="./image/logo nom.png" class="footer-logo" alt="">
+                <p><i class="bi bi-house-door-fill"></i>742 Evergreen Terrace, 12345, Narnia</p>
+                <a><i class="bi bi-envelope-fill"></i>Rien-a-voir-ici@brasserie-wilders.com</a>
+                <p><i class="bi bi-phone-fill"></i>03.12.34.56.78</p>
+            </aside>
+            <nav class="footer-section">
+                <h3>Sections :</h3>
+                <a href="#top">Accueil</a>
+                <a href="beers.html">Nos bières</a>
+                <a href="events.html">Evènements</a>
+                <a href="about.html">A propos de nous</a>
+                <a href="contacts.html">Nous contacter</a>
+            </nav>
+            <aside class="footer-horaires">
+                <h3>Horaires d'ouverture</h3>
+                <p>La semaine : 15h-22h</p>
+                <p>Le vendredi : 17h-00h</p>
+                <p>Le samedi : 17h-03h</p>
+                <p>Le dimanche : fermé</p>
+            </aside>
+            <nav class="footer-reseaux">
+                <h3>Réseaux sociaux :</h3>
+                <div class="network-icons">
+                    <a href=""><i class="bi bi-facebook"></i></a>
+                    <a href=""><i class="bi bi-instagram"></i></a>
+                </div>
+                <img src="./image/logoab_eurofeuille_biologique.png" class="network-image" alt="">
+            </nav>
+        </section>
+    </footer>
+    <div class="trademark">
+        Coded by Alexandre, Julien and Philippe
+    </div>
 </body>
+
 </html>
