Ajout symbole copyright

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
             </section>
         </footer>
         <div class="trademark">
-            Coded by Alexandre, Julien and Philippe
+            Coded by Alexandre, Julien and Philippe <br>
+            © WildCodeSchool promotion Février 2024
         </div>
 </body>
 </html>
