etiquette fixe + opacity footer 100%

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
         </nav>
     </header>
     <main>
-        <div class="page-title">
-            <p>Accueil</p>
+        <div class="titre">
+            <div class="page-title">
+                <p>News</p>
+            </div>
         </div>
         <div class="thumbnail">
             <div class="article">
@@ -110,4 +112,5 @@
         © WildCodeSchool promotion Février 2024
     </div>
 </body>
+
 </html>
