Création de la page About us

--- a/events.html
+++ b/events.html
@@ -49,7 +49,7 @@
                                     laboriosam fugiat molestias velit libero.</p>
                             </div>
         
-                            <div class="read-button"><a href="#">En savoir plus</a>
+                            <div class="read-button"><a href="https://www.google.fr/">En savoir plus</a>
                             </div>
                         </div>
                         <div class="carousel__snapper">
