--- a/beers.html
+++ b/beers.html
@@ -1,51 +1,84 @@
 <!DOCTYPE html>
-<html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./style/index.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-        
-        <title>Accueil | Les 3 Wilders</title>
-    </head>
-    <header id="top">
+
+<head>
+    <meta charset="UTF-8">
+    <html lang="fr">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="/style/beers.css">
+    <title>Les 3 Wilders | Nos bières</title>
+</head>
+
+<body>
+    <header>
+        <nav class="menu-header">
+            <div class="logo-neg">
+                <img src="/image/logo-neg.png" alt="logo de la marque Les 3 Wilders">
+            </div>
+            <div class="menu-header-pages">
+                <a href="/index.html">Acceuil</a>
+                <a href="/beers.html">Nos bières</a>
+                <a href="/events.html">Evénements</a>
+                <a href="/contacts.html">Contacts</a>
+                <a href="/about.html">A propos</a>
+            </div>
+            <div class="social-link">
+                <a href="#"><i class="bi bi-facebook"></i></a>
+                <a href="#"><i class="bi bi-instagram"></i></a>
+            </div>
+        </nav>
     </header>
-    <body>
-        <footer>
-            <section class="footer-container">
-                <aside class="infos">
-                    <img src="./image/logo nom.png" class="footer-logo" alt="">
-                    <p><i class="bi bi-house-door-fill"></i>742 Evergreen Terrace, 12345, Narnia</p>
-                    <a><i class="bi bi-envelope-fill"></i>Rien-a-voir-ici@brasserie-wilders.com</a>
-                    <p><i class="bi bi-phone-fill"></i>03.12.34.56.78</p>
-                </aside>
-                <nav class="footer-section">
-                    <h3>Sections :</h3>
-                    <a href="index.html">Accueil</a>
-                    <a href="#top">Nos bières</a>
-                    <a href="events.html">Evènements</a>
-                    <a href="about.html">A propos de nous</a>
-                    <a href="contacts.html">Nous contacter</a>
-                </nav>
-                <aside class="footer-horaires">
-                    <h3>Horaires d'ouverture</h3>
-                    <p>La semaine : 15h-22h</p>
-                    <p>Le vendredi : 17h-00h</p>
-                    <p>Le samedi : 17h-03h</p>
-                    <p>Le dimanche : fermé</p>
-                </aside>
-                <nav class="footer-reseaux">
-                    <h3>Réseaux sociaux :</h3>
-                    <div class="network-icons">
-                        <a href=""><i class="bi bi-facebook"></i></a>
-                        <a href=""><i class="bi bi-instagram"></i></a>
-                    </div>
-                    <img src="./image/logoab_eurofeuille_biologique.png" class="network-image" alt="">
-                </nav>
-            </section>
-        </footer>
-        <div class="trademark">
-            Coded by Alexandre, Julien and Philippe
+    <main>
+        <div class="titre">
+            <div class="page-title">
+                <p>Les classiques</p>
+            </div>
         </div>
-    </body>
+
+        <div class="titre">
+            <div class="page-title">
+                <p>Nos Ephémères</p>
+            </div>
+        </div>
+
+
+    </main>
+    <footer>
+        <section class="footer-container">
+            <aside class="infos">
+                <img src="./image/logo nom.png" class="footer-logo" alt="">
+                <p><i class="bi bi-house-door-fill"></i>742 Evergreen Terrace, 12345, Narnia</p>
+                <a><i class="bi bi-envelope-fill"></i>Rien-a-voir-ici@brasserie-wilders.com</a>
+                <p><i class="bi bi-phone-fill"></i>03.12.34.56.78</p>
+            </aside>
+            <nav class="footer-section">
+                <h3>Sections :</h3>
+                <a href="index.html">Accueil</a>
+                <a href="#top">Nos bières</a>
+                <a href="events.html">Evènements</a>
+                <a href="about.html">A propos de nous</a>
+                <a href="contacts.html">Nous contacter</a>
+            </nav>
+            <aside class="footer-horaires">
+                <h3>Horaires d'ouverture</h3>
+                <p>La semaine : 15h-22h</p>
+                <p>Le vendredi : 17h-00h</p>
+                <p>Le samedi : 17h-03h</p>
+                <p>Le dimanche : fermé</p>
+            </aside>
+            <nav class="footer-reseaux">
+                <h3>Réseaux sociaux :</h3>
+                <div class="network-icons">
+                    <a href=""><i class="bi bi-facebook"></i></a>
+                    <a href=""><i class="bi bi-instagram"></i></a>
+                </div>
+                <img src="./image/logoab_eurofeuille_biologique.png" class="network-image" alt="">
+            </nav>
+        </section>
+    </footer>
+    <div class="trademark">
+        Coded by Alexandre, Julien and Philippe
+    </div>
+</body>
+
 </html>
