pages nos bière, ajout de la vincent + la yavuz

--- a/beers.html
+++ b/beers.html
@@ -34,8 +34,57 @@
             <div class="page-title">
                 <p>Les classiques</p>
             </div>
-
         </div>
+        <section class="classic">
+            <article class="vincent">
+                <img src="/image/bottle-beer.png" alt="bouteille de bière" class="imgbeer">
+                <h2>La Vincent</h2>
+                <ul>
+                    <li><strong>Type: Neipa</strong></li>
+                    <li><strong>alcool: 5.5%</strong></li>
+                    <li class="progress-element">
+                        <p class="progress-label"><strong>Amertume</strong></p>
+                        <div class="progress-container-amertume">
+                            <progress id='p0' value='55' max='100'></progress>
+                        </div>
+                    </li>
+                    <li class="progress-element">
+                        <p class="progress-label"><strong>Corps</strong></p>
+                        <div class="progress-container-corps">
+                            <progress id='p0' value='35' max='100'></progress>
+                        </div>
+                    </li>
+                    <li class="beer-description">
+                        De puissants arômes de fruits exotiques nous envahissent le palais dès la première gorgée de
+                        cette bère onctueuse et doucement amère
+                    </li>
+                </ul>
+            </article>
+            <article class="yavuz">
+                <img src="/image/bottle-beer.png" alt="bouteille de bière" class="imgbeer">
+                <h2>La Yavuz</h2>
+                <ul>
+                    <li><strong>Type: Double IPA</strong></li>
+                    <li><strong>alcool: 8.5%</strong></li>
+                    <li class="progress-element">
+                        <p class="progress-label"><strong>Amertume</strong></p>
+                        <div class="progress-container-amertume">
+                            <progress id='p0' value='90' max='100'></progress>
+                        </div>
+                    </li>
+                    <li class="progress-element">
+                        <p class="progress-label"><strong>Corps</strong></p>
+                        <div class="progress-container-corps">
+                            <progress id='p0' value='80' max='100'></progress>
+                        </div>
+                    </li>
+                    <li class="beer-description">
+                        Bière forte et bien amère ! Fermentée avec du saucissons provenant d'élevage porcine bio venant
+                        contrecarrer l'acidité et la douceur de l'agrume et de fruit exotiques.
+                    </li>
+                </ul>
+            </article>
+        </section>
 
         <div class="titre">
             <div class="page-title">
