Responsive page contact

--- a/contact_320px.html
+++ b/contact_320px.html
@@ -5,7 +5,7 @@
     <html lang="fr">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/style/contacts.css">
+    <link rel="stylesheet" href="/style/contact_320px.css">
     <title>Les 3 Wilders | Contact</title>
 </head>
 
