page biere, fini les classiques et repsonsive pour utrawild

--- a/beers.html
+++ b/beers.html
@@ -79,8 +79,80 @@
                         </div>
                     </li>
                     <li class="beer-description">
-                        Bière forte et bien amère ! Fermentée avec du saucissons provenant d'élevage porcine bio venant
+                        Bière forte et bien amère ! Fermentée avec du saucissons provenant d'élevage porcin bio venant
                         contrecarrer l'acidité et la douceur de l'agrume et de fruit exotiques.
+                    </li>
+                </ul>
+            </article>
+            <article class="eleonore">
+                <img src="/image/bottle-beer.png" alt="bouteille de bière" class="imgbeer">
+                <h2>L'Eléonore</h2>
+                <ul>
+                    <li><strong>Type: Lager de blé</strong></li>
+                    <li><strong>alcool: 4.2%</strong></li>
+                    <li class="progress-element">
+                        <p class="progress-label"><strong>Amertume</strong></p>
+                        <div class="progress-container-amertume">
+                            <progress id='p0' value='90' max='100'></progress>
+                        </div>
+                    </li>
+                    <li class="progress-element">
+                        <p class="progress-label"><strong>Corps</strong></p>
+                        <div class="progress-container-corps">
+                            <progress id='p0' value='80' max='100'></progress>
+                        </div>
+                    </li>
+                    <li class="beer-description">
+                        Bière subtile, légère et désésaltérante. Une bière de soif florale et légèrement marine qui nous
+                        ferait presque voyagerau bord de la Manche dans un début de primptemps.
+                    </li>
+                </ul>
+            </article>
+            <article class="benoit">
+                <img src="/image/bottle-beer.png" alt="bouteille de bière" class="imgbeer">
+                <h2>La St Benoit</h2>
+                <ul>
+                    <li><strong>Type: Bière d'abbaye</strong></li>
+                    <li><strong>alcool: 6.7%</strong></li>
+                    <li class="progress-element">
+                        <p class="progress-label"><strong>Amertume</strong></p>
+                        <div class="progress-container-amertume">
+                            <progress id='p0' value='90' max='100'></progress>
+                        </div>
+                    </li>
+                    <li class="progress-element">
+                        <p class="progress-label"><strong>Corps</strong></p>
+                        <div class="progress-container-corps">
+                            <progress id='p0' value='80' max='100'></progress>
+                        </div>
+                    </li>
+                    <li class="beer-description">
+                        Bière ronde et gourmande légèrement épicé, non sans rappelé nos folles escapades Lilloise et nos
+                        "black out" mémorable !
+                    </li>
+                </ul>
+            </article>
+            <article class="ayub">
+                <img src="/image/bottle-beer.png" alt="bouteille de bière" class="imgbeer">
+                <h2>L'Ayub</h2>
+                <ul>
+                    <li><strong>Type: Porter</strong></li>
+                    <li><strong>alcool: 5.2</strong></li>
+                    <li class="progress-element">
+                        <p class="progress-label"><strong>Amertume</strong></p>
+                        <div class="progress-container-amertume">
+                            <progress id='p0' value='90' max='100'></progress>
+                        </div>
+                    </li>
+                    <li class="progress-element">
+                        <p class="progress-label"><strong>Corps</strong></p>
+                        <div class="progress-container-corps">
+                            <progress id='p0' value='80' max='100'></progress>
+                        </div>
+                    </li>
+                    <li class="beer-description">
+                        Bière de malte torréfiés lui apportant des aromes de chocolat et de café, a boire absolument le
+                        matin tôt accompagné d'un fameux "breafast" Aglais !
                     </li>
                 </ul>
             </article>
@@ -88,7 +160,7 @@
 
         <div class="titre">
             <div class="page-title">
-                <p>Nos Ephémères</p>
+                <p>Les Ephémères</p>
             </div>
         </div>
 
