--- a/beers.html
+++ b/beers.html
@@ -163,6 +163,83 @@
                 <p>Les Ephémères</p>
             </div>
         </div>
+        <section class="éphémère">
+            <article class="anae">
+                <img src="/image/bottle-beer.png" alt="bouteille de bière" class="imgbeer">
+                <h2>L'Anaé</h2>
+                <ul>
+                    <li><strong>Type: Rye Amber Ale</strong></li>
+                    <li><strong>alcool: 6.6%</strong></li>
+                    <li class="progress-element">
+                        <p class="progress-label"><strong>Amertume</strong></p>
+                        <div class="progress-container-amertume">
+                            <progress id='p0' value='55' max='100'></progress>
+                        </div>
+                    </li>
+                    <li class="progress-element">
+                        <p class="progress-label"><strong>Corps</strong></p>
+                        <div class="progress-container-corps">
+                            <progress id='p0' value='35' max='100'></progress>
+                        </div>
+                    </li>
+                    <li class="beer-description">
+                        Bière ambrée au seigle. Des notes caramélisées accompagnent les arômes épicés du seigle sur une
+                        bière onctueuse. Parfaite pour accompagner vos seances bronzages sous le soleil Niçois.
+
+                    </li>
+                </ul>
+            </article>
+            <article class="gab">
+                <img src="/image/bottle-beer.png" alt="bouteille de bière" class="imgbeer">
+                <h2>La Gab'</h2>
+                <ul>
+                    <li><strong>Type: Imperial Stout</strong></li>
+                    <li><strong>alcool: 10.5%</strong></li>
+                    <li class="progress-element">
+                        <p class="progress-label"><strong>Amertume</strong></p>
+                        <div class="progress-container-amertume">
+                            <progress id='p0' value='75' max='100'></progress>
+                        </div>
+                    </li>
+                    <li class="progress-element">
+                        <p class="progress-label"><strong>Corps</strong></p>
+                        <div class="progress-container-corps">
+                            <progress id='p0' value='100' max='100'></progress>
+                        </div>
+                    </li>
+                    <li class="beer-description">
+                        Bière "noir" de seigle et au calvados vielli 24 mois en barrique. Des notes épicé accompagnent
+                        les arômes de café et de pomme. Attention car cette bière ne tartine pas votre pain... mais bien
+                        votre caboche ! Le lendemain matin risque d'être fort compliqué...
+                    </li>
+                </ul>
+            </article>
+            <article class="mat">
+                <img src="/image/bottle-beer.png" alt="bouteille de bière" class="imgbeer">
+                <h2>La Mat' <i class="soldout">SOLD OUT</i></h2>
+                <ul>
+                    <li><strong>Type: Triple</strong></li>
+                    <li><strong>alcool: 8%</strong></li>
+                    <li class="progress-element">
+                        <p class="progress-label"><strong>Amertume</strong></p>
+                        <div class="progress-container-amertume">
+                            <progress id='p0' value='75' max='100'></progress>
+                        </div>
+                    </li>
+                    <li class="progress-element">
+                        <p class="progress-label"><strong>Corps</strong></p>
+                        <div class="progress-container-corps">
+                            <progress id='p0' value='100' max='100'></progress>
+                        </div>
+                    </li>
+                    <li class="beer-description">
+                        Bière de type belge. Légérement sucrée et peu amère. Parfaite en hiver au coin du feu entre amis
+                        sur une peau de bête... on ira pas dans les details !
+
+                    </li>
+                </ul>
+            </article>
+        </section>
 
 
     </main>
