--- a/events.html
+++ b/events.html
@@ -37,11 +37,11 @@
                     <li id="carousel__slide1"
                         tabindex="0"
                         class="carousel__slide">
-                        <div class="article">
+                        <div class="article article1">
                             <div class="article-title">
                                 <h3>RESOW</h3>
                             </div>
-                            <div class="article-img"><img src="/image/event.jpg" alt="">
+                            <div class="article-img"><img src="/image/resow.jpg" alt="">
                             </div>
                             <div class="article-content">
                                 <p>Date : 12/12/24</p>
@@ -65,11 +65,11 @@
                     <li id="carousel__slide2"
                         tabindex="0"
                         class="carousel__slide">
-                        <div class="article">
+                        <div class="article article2">
                             <div class="article-title">
                                 <h3>Cult of Sacrifice</h3>
                             </div>
-                            <div class="article-img"><img src="/image/event.jpg" alt="">
+                            <div class="article-img"><img src="/image/cultOfSac.png" alt="">
                             </div>
                             <div class="article-content">
                                 <p>Date : 24/12/24</p>
@@ -92,8 +92,8 @@
                     <li id="carousel__slide3"
                         tabindex="0"
                         class="carousel__slide">
-                        <div class="article">
-                            <div class="article-img"><img src="/image/event.jpg" alt=""></div>
+                        <div class="article article3">
+                            <div class="article-img"><img src="/image/jivay.png" alt=""></div>
                             <div class="article-title">
                                 <h3>Guest brasseur</h3>
                             </div>
@@ -114,8 +114,8 @@
                     <li id="carousel__slide4"
                         tabindex="0"
                         class="carousel__slide">
-                        <div class="article">
-                            <div class="article-img"><img src="/image/event.jpg" alt=""></div>
+                        <div class="article article4">
+                            <div class="article-img"><img src="/image/brassin.jpg" alt=""></div>
                             <div class="article-title">
                                 <h3>Nouveau brassin</h3>
                             </div>
