Page contact responsive et supression des fichiers contact_320px html et css

--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,7 @@
                 <a href="/index.html">Accueil</a>
                 <a href="/beers.html">Nos bières</a>
                 <a href="/events.html">Evénements</a>
-                <a href="/contacts.html">Contact</a>
+                <a href="/contacts.html">Contacts</a>
                 <a href="/about.html">A propos</a>
             </div>
             <div class="social-link">
