Fix des liens de la section du footer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img src="/image/logo-neg.png" alt="logo de la marque Les 3 Wilders">
             </div>
             <div class="menu-header-pages">
-                <a href="/index.html">Acceuil</a>
+                <a href="#top">Acceuil</a>
                 <a href="/beers.html">Nos bières</a>
                 <a href="/events.html">Evénements</a>
                 <a href="/contacts.html">Contacts</a>
