--- a/contacts.html
+++ b/contacts.html
@@ -93,10 +93,10 @@
             </aside>
             <nav class="footer-section">
                 <h3>Sections :</h3>
-                <a href="#top">Accueil</a>
+                <a href="index.html">Accueil</a>
                 <a href="beers.html">Nos bières</a>
                 <a href="events.html">Evènements</a>
-                <a href="contacts.html">Nous contacter</a>
+                <a href="#top">Nous contacter</a>
                 <a href="about.html">A propos de nous</a>           
             </nav>
             <aside class="footer-horaires">
