MAJ header pour responsive + menu burger

--- a/about.html
+++ b/about.html
@@ -15,6 +15,8 @@
             <div class="logo-neg">
                 <img src="/image/logo-neg.png" alt="logo de la marque Les 3 Wilders">
             </div>
+            <label class="menu-burger" for="toggle">☰</label>
+            <input type="checkbox" id="toggle">
             <div class="menu-header-pages">
                 <a href="/index.html">Acceuil</a>
                 <a href="/beers.html">Nos bières</a>
@@ -66,8 +68,10 @@
                     <h3>Philippe</h3>
                 </div>
                 <div class="article-content">
-                    <p>Passioné de jeux vidéos depuis tout petit ainsi que mordu de musique et de cinéma, Philippe aime aussi
-                        la bière. Il s'est donc mis en tête d'en fabriquer. Mais seulement des bonnes. Et des artisanales.
+                    <p>Passioné de jeux vidéos depuis tout petit ainsi que mordu de musique et de cinéma, Philippe aime
+                        aussi
+                        la bière. Il s'est donc mis en tête d'en fabriquer. Mais seulement des bonnes. Et des
+                        artisanales.
                         Pleines d'amour et de savoir-faire.
                     </p>
                 </div>
