--- a/beers.html
+++ b/beers.html
@@ -15,6 +15,8 @@
             <div class="logo-neg">
                 <img src="/image/logo-neg.png" alt="logo de la marque Les 3 Wilders">
             </div>
+            <label class="menu-burger" for="toggle">☰</label>
+            <input type="checkbox" id="toggle">
             <div class="menu-header-pages">
                 <a href="/index.html">Acceuil</a>
                 <a href="/beers.html">Nos bières</a>
@@ -132,9 +134,9 @@
                     </li>
                 </ul>
             </article>
-            <article class="ayub">
+            <article class="ayoub">
                 <img src="/image/bottle-beer.png" alt="bouteille de bière" class="imgbeer">
-                <h2>L'Ayub</h2>
+                <h2>L'Ayoub</h2>
                 <ul>
                     <li><strong>Type: Porter</strong></li>
                     <li><strong>alcool: 5.2</strong></li>
@@ -257,7 +259,7 @@
                 <a href="#top">Nos bières</a>
                 <a href="events.html">Evènements</a>
                 <a href="contacts.html">Nous contacter</a>
-                <a href="about.html">A propos de nous</a>            
+                <a href="about.html">A propos de nous</a>
             </nav>
             <aside class="footer-horaires">
                 <h3>Horaires d'ouverture</h3>
