--- a/contacts.html
+++ b/contacts.html
@@ -15,6 +15,8 @@
             <div class="logo-neg">
                 <img src="/image/logo-neg.png" alt="logo de la marque Les 3 Wilders">
             </div>
+            <label class="menu-burger" for="toggle">☰</label>
+            <input type="checkbox" id="toggle">
             <div class="menu-header-pages">
                 <a href="/index.html">Accueil</a>
                 <a href="/beers.html">Nos bières</a>
@@ -97,7 +99,7 @@
                 <a href="beers.html">Nos bières</a>
                 <a href="events.html">Evènements</a>
                 <a href="contacts.html">Nous contacter</a>
-                <a href="about.html">A propos de nous</a>           
+                <a href="about.html">A propos de nous</a>
             </nav>
             <aside class="footer-horaires">
                 <h3>Horaires d'ouverture</h3>
