rework du Responsive du footer

--- a/events.html
+++ b/events.html
@@ -145,8 +145,10 @@
     </main>
     <footer>
         <section class="footer-container">
+            <div class="footer-logo">
+            <img src="./image/logo nom.png" class="footer-logo" alt="">
+            </div>
             <aside class="infos">
-                <img src="./image/logo nom.png" class="footer-logo" alt="">
                 <p><i class="bi bi-house-door-fill"></i>742 Evergreen Terrace, 12345, Narnia</p>
                 <a><i class="bi bi-envelope-fill"></i>Rien-a-voir-ici@brasserie-wilders.com</a>
                 <p><i class="bi bi-phone-fill"></i>03.12.34.56.78</p>
