--- a/beers.html
+++ b/beers.html
@@ -247,12 +247,14 @@
     </main>
     <footer>
         <section class="footer-container">
-            <aside class="infos">
+            <div class="footer-logo">
                 <img src="./image/logo nom.png" class="footer-logo" alt="">
-                <p><i class="bi bi-house-door-fill"></i>742 Evergreen Terrace, 12345, Narnia</p>
-                <a><i class="bi bi-envelope-fill"></i>Rien-a-voir-ici@brasserie-wilders.com</a>
-                <p><i class="bi bi-phone-fill"></i>03.12.34.56.78</p>
-            </aside>
+                </div>
+                <aside class="infos">
+                    <p><i class="bi bi-house-door-fill"></i>742 Evergreen Terrace, 12345, Narnia</p>
+                    <a><i class="bi bi-envelope-fill"></i>Rien-a-voir-ici@brasserie-wilders.com</a>
+                    <p><i class="bi bi-phone-fill"></i>03.12.34.56.78</p>
+                </aside>
             <nav class="footer-section">
                 <h3>Sections :</h3>
                 <a href="index.html">Accueil</a>
