gros push de c'est mort ! du conyrnu en blind + detailing

--- a/beers.html
+++ b/beers.html
@@ -105,7 +105,7 @@
                         </div>
                     </li>
                     <li class="beer-description">
-                        Bière subtile, légère et désésaltérante. Une bière de soif florale et légèrement marine qui nous
+                        Bière subtile, légère et désaltérante. Une bière de soif florale et légèrement marine qui nous
                         ferait presque voyagerau bord de la Manche dans un début de primptemps.
                     </li>
                 </ul>
@@ -166,7 +166,7 @@
             </div>
         </div>
         <section class="éphémère">
-            <article class="anae">
+            <article id="anae" class="anae">
                 <img src="/image/bottle-beer.png" alt="bouteille de bière" class="imgbeer">
                 <h2>L'Anaé</h2>
                 <ul>
