--- a/index.html
+++ b/index.html
@@ -38,39 +38,40 @@
         </div>
         <div class="thumbnail">
             <div class="article">
-                <div class="article-img"><img src="/image/event.jpg" alt=""></div>
+                <div class="article-img"><img src="/image/new-anae.jpg" alt="" class="new-anae"></div>
                 <div class="article-title">
-                    <h3>Evènement</h3>
+                    <h3>L'Anaé</h3>
                 </div>
                 <div class="article-content">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, voluptatum? Officiis veniam
-                        tenetur, eveniet aliquam adipisci ad commodi nulla repudiandae nihil, hic laborum non! Id
-                        laboriosam fugiat molestias velit libero.</p>
+                    <p>On vous a concocté notre dernière éphémère ! Une Rye Amber Ale tout juste sortie de fermentation,
+                        parfaite pour ce début de primptemps ! </p>
                 </div>
 
-                <div class="read-button"><a href="#">En savoir plus</a></div>
+                <div class="read-button"><a href="beers.html#anae">En savoir plus</a></div>
             </div>
             <div class="article">
-                <div class="article-img"><img src="/image/event.jpg" alt=""></div>
+                <div class="article-img"><img src="/image/cultOfSac.png" alt="" class="cult"></div>
                 <div class="article-title">
-                    <h3>Evènement</h3>
+                    <h3>On va faire du sale !</h3>
                 </div>
                 <div class="article-content">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, voluptatum? Officiis veniam
-                        tenetur, eveniet aliquam adipisci ad commodi nulla repudiandae nihil, hic laborum non! Id
-                        laboriosam fugiat molestias velit libero.</p>
+                    <p>Enfin ! On a reussi à booker notre petit coup de coeur pour vous le faire partager en sirotant
+                        vos bières préférées. On aura l'honneur d'acceuillir <strong>Cult Of Sacrifice</strong> pour
+                        bien
+                        nettoyer vos esgourdes !</p>
                 </div>
-                <div class="read-button"><a href="#">En savoir plus</a></div>
+                <div class="read-button"><a href="events.html#carousel__slide2">En savoir plus</a></div>
             </div>
             <div class="article">
-                <div class="article-img"><img src="/image/event.jpg" alt=""></div>
+                <div class="article-img"><img src="/image/cuve.jpg" alt="" class="cuve"></div>
                 <div class="article-title">
-                    <h3>Evènement</h3>
+                    <h3>La grosse Bertha</h3>
                 </div>
                 <div class="article-content">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, voluptatum? Officiis veniam
-                        tenetur, eveniet aliquam adipisci ad commodi nulla repudiandae nihil, hic laborum non! Id
-                        laboriosam fugiat molestias velit libero.</p>
+                    <p>La fammille s'agrandit ! parce que vous êtes vraiment des gros soulard, vous nous avez forcé à
+                        investir dans une grosse cuve de fermentation pour que vous puissiez encore et toujours plus
+                        boire. <strong>Encore MERCI !</strong> tout ceci c'est grâce à <strong>vous</strong>, et à votre
+                        foie...</p>
                 </div>
                 <div class="read-button"><a href="#">En savoir plus</a></div>
             </div>
