Ajout des icones musique cards events

--- a/events.html
+++ b/events.html
@@ -49,11 +49,11 @@
                             <p>Date : 12/12/24</p>
                             <p>A 19h30 (Plutôt 20h c'est des zicos, lol)</p>
                             <p>Prix d'entrée : 5€</p>
-                            <p>Leur Youtube : <a href="#">Cliquez ici</a></p>
-                            <p>Leur Spotify : <a href="#">Cliquez ici</a></p>
+                            <p><a href=""></a><i class="bi bi-youtube"></i> : <a href="#">Cliquez ici</a></p>
+                            <p><i class="bi bi-spotify"> : </i><a href="#">Cliquez ici</a></p>
                         </div>
 
-                        <div class="read-button"><a href="#">En savoir plus</a>
+                        <div class="read-button"><a href="index.html#top">En savoir plus</a>
                         </div>
                     </div>
                     <div class="carousel__snapper">
@@ -73,8 +73,8 @@
                             <p>Date : 24/12/24</p>
                             <p>A 20h00</p>
                             <p>Prix d'entrée : PAF libre</p>
-                            <p>Leur Youtube : <a href="#">Cliquez ici</a></p>
-                            <p>Leur Spotify : <a href="#">Cliquez ici</a></p>
+                            <p><a href=""></a><i class="bi bi-youtube"></i> : <a href="#">Cliquez ici</a></p>
+                            <p><i class="bi bi-spotify"> : </i><a href="#">Cliquez ici</a></p>
                         </div>
                         <div class="read-button"><a href="#">En savoir plus</a>
                         </div>
